
This is a list of changes since the initial release of Palabra.

Version 0.1 (August 14, 2009)
=============================
Initial release